--- a/src/content/technotes/TN0008-production-readiness-checklist.mdx
+++ b/src/content/technotes/TN0008-production-readiness-checklist.mdx
@@ -1,42 +1,43 @@
 ---
-title: Production readineess checklist
+title: Production readiness checklist
 id: TN0008
 tags: [server, sre, client, best practices]
 ---
 
-Before you start to take on production traffic from your clients, we'd recommend running through this checklist.
+We recommend that you complete this checklist before your supergraph begins handling production traffic from clients.
 
 ## In Apollo Studio
 
-- Ensure you are creating [graph variants](/studio/org/graphs#managing-variants) to differentiate your development stages
-  - Optionally, [protect your production variant](/studio/org/graphs#protected-variants-enterprise-only) to avoid accidental changes while working in Apollo Studio
-- Ensure your [clients are being correctly identified](/studio/client-awareness/) by name and version
-  - If using an Apollo Client library, add the name and version to the constructor 
-    - For example, the [React client uses the `name` and `version` attributes](/react/api/core/ApolloClient#name)in the constructor options
-  - If using a third-party GraphQL client, set the `apollographql-client-name` and `apollographql-client-version` headers on the request to identify your client
-  - For an example of enforcing this as a requirement at the Gateway, see [this technote for Client ID enforcement](/technotes/TN0001-client-id-enforcement/) 
+- Ensure that you've created multiple [variants](/studio/org/graphs#managing-variants) to represent the different environments where your supergraph runs (production, staging, and so on).
+  - Optionally, [protect your production variant](/studio/org/graphs#protected-variants-enterprise-only) to avoid accidental changes while working in Apollo Studio.
+- Ensure that your [clients identify themselves](/studio/client-awareness/) by name and version.
+  - If you're using an Apollo Client library, you can add a client name and version to the constructor.
+    - For example, the [React client uses the `name` and `version` attributes](/react/api/core/ApolloClient#name) in the constructor options.
+  - If you're using a third-party GraphQL client, set the `apollographql-client-name` and `apollographql-client-version` HTTP headers for each request to identify your client.
+  - For an example of enforcing client identification in your gateway, see [this technote for Client ID enforcement](/technotes/TN0001-client-id-enforcement/).
   
 ## Server-side
-- Turn off introspection for your production servers
-  - Apollo Studio can be used to see the schema per variant if required
-- Ensure [Managed Federation](/federation/managed-federation/setup/) is configured
-- Ensure [`rover subgraph check`](/rover/commands/subgraphs#subgraph-check) and [`rover subgraph publish`](/rover/commands/subgraphs#subgraph-publish) are integrated into your CI/CD pipeline
-- If your [subgraph server is listed as compatible with `ftv1`](/federation/other-servers), ensure [federated traces](/federation/metrics/) are enabled and are being visualized as expected within Apollo Studio
-  - Enable [fractional trace sampling via `fieldLevelInstrumentation`](/studio/metrics/field-usage/#fractional-sampling) to reduce performance hits due to tracing
-- Consider adding caching layers
-  - Apollo Server and Apollo Router have support for [Automatic Persisted Queries (APQ)](/apollo-server/performance/apq/) out of the box
-    - If using an Apollo Client, make sure to enable APQ support
-    - If using Apollo Server, ensure you use a [distributed caching system](/apollo-server/performance/cache-backends) for APQ in production to avoid cache inconsistency across server instances
-    - Utilizing the [`@cacheControl` directive](/apollo-server/api/plugin/cache-control) can allow your CDN to cache APQ GET requests using the `Cache-Control` header
-    - Additionally, you can have your Apollo Gateway send APQ requests
-      - See [the example below](#apollo-gateway-apq-example) for an example of how to configure this
-  - [Full response caching](/apollo-server/performance/caching/) can be introduced to improve performance out of the box
-- Ensure you've load tested your graph
-  - This should be done with a load representative of your current traffic. Operations that will be used in production can be used in the load testing
-  - To investigate performance issues, identify which operations are performing slowly using Apollo Studio
-    - Look at the resolver execution times for slow areas of execution 
-    - Avoid having multiple datasource calls in a single resolver whenever possible
-    - Understand [query plan execution](/federation/query-plans) for slow performing operations and to help optimize schema design
+
+- For security, disable introspection for all production GraphQL servers.
+  - You can continue to view and fetch your GraphQL schemas from Apollo Studio.
+- Ensure that you've correctly configured [managed federation](/federation/managed-federation/setup/).
+- Ensure that you've integrated [`rover subgraph check`](/rover/commands/subgraphs#subgraph-check) and [`rover subgraph publish`](/rover/commands/subgraphs#subgraph-publish) into your CI/CD pipeline.
+- If your [subgraph servers are listed as compatible with `ftv1`](/federation/other-servers), ensure that you've enabled [federated traces](/federation/metrics/), and that you can view operation metrics as expected in Apollo Studio.
+  - Enable [fractional trace sampling via `fieldLevelInstrumentation`](/studio/metrics/field-usage/#fractional-sampling) to reduce performance hits due to tracing.
+- Consider adding caching layers.
+  - Apollo Server and the Apollo Router both support [automatic persisted queries (APQ)](/apollo-server/performance/apq/) out of the box.
+    - If you're using an Apollo Client library, make sure to enable APQ support.
+    - If using Apollo Server, ensure that you use a [distributed caching system](/apollo-server/performance/cache-backends) for APQ in production to avoid cache inconsistency across server instances.
+    - Optionally use the [`@cacheControl` directive](/apollo-server/api/plugin/cache-control) to enable your CDN to cache APQ GET requests using the `Cache-Control` header.
+    - Additionally, you can configure your gateway can send APQ requests to your subgraphs.
+      - [See the example below.](#apollo-gateway-apq-example)
+  - Optionally add [full response caching](/apollo-server/performance/caching/) to improve performance.
+- Ensure that you've load-tested your graph.
+  - Test loads should be representative of your current traffic (both in terms of volume _and_ in terms of the actual operations you execute in the test).
+  - To investigate performance issues, use Apollo Studio to identify which operations are performing slowly.
+    - Look at resolver execution times to identify slow areas of execution.
+    - Whenever possible, avoid making multiple calls to data sources within a single resolver.
+    - Understand [query plan execution](/federation/query-plans) to help understand slow operations and optimize your supergraph to avoid them.
 
 
 ### Apollo Gateway APQ example
