--- a/src/content/technotes/TN0007-testing-in-a-federated-architecture-unit-tests.mdx
+++ b/src/content/technotes/TN0007-testing-in-a-federated-architecture-unit-tests.mdx
@@ -11,7 +11,7 @@ We recommend unit testing all your resolvers. When unit testing your resolvers, 
 
 ### `__resolveReference`
 
-A [`__resolveReference`](https://www.apollographql.com/docs/federation/entities/#2-define-a-reference-resolver) warrants a specific call out in a federated architecture. A `__resolveReference` is how subgraphs communicate, making testing this code very important.
+A [`__resolveReference`](/federation/entities/#2-define-a-reference-resolver) resolver warrants a specific callout in a federated architecture. A `__resolveReference` resolver is how subgraphs resolve entities across subgraphs, making testing this code very important.
 
 ## Integration testing
 
