--- a/src/content/technotes/TN0007-testing-in-a-federated-architecture-unit-tests.mdx
+++ b/src/content/technotes/TN0007-testing-in-a-federated-architecture-unit-tests.mdx
@@ -7,7 +7,7 @@ Testing in a federated architecture has three general parts: unit testing, integ
 
 ## Unit testing
 
-We recommend unit testing all your resolvers. When unit testing your resolvers, we recommend mocking as much of the data as possible using something like [`@faker-js/faker`](https://www.npmjs.com/package/@faker-js/faker). This package allows you to use realistic fake data when mocking inputs and outputs.
+We recommend unit testing all your resolvers. When unit testing your resolvers, we recommend mocking as much of the data as possible using a package like [`@faker-js/faker`](https://www.npmjs.com/package/@faker-js/faker). This package allows you to use realistic fake data when mocking inputs and outputs.
 
 ### `__resolveReference`
 
