--- a/src/content/technotes/TN0007-testing-in-a-federated-architecture-unit-tests.mdx
+++ b/src/content/technotes/TN0007-testing-in-a-federated-architecture-unit-tests.mdx
@@ -3,7 +3,13 @@ title: Testing in a Federated Architecture
 tags: [server, router, testing]
 ---
 
-Testing in a federated architecture has three general parts: unit testing, integration testing, and composition testing.
+Comprehensively testing a federated supergraph requires all of the following:
+
+* [Unit testing](#unit-testing) in individual subgraphs
+* [Integration testing](#integration-testing) for the entire supergraph
+* [Composition testing](#composition-testing) for supergraph schema generation
+
+This article provides high-level guidance for each.
 
 ## Unit testing
 
