--- a/src/content/technotes/TN0007-testing-in-a-federated-architecture-unit-tests.mdx
+++ b/src/content/technotes/TN0007-testing-in-a-federated-architecture-unit-tests.mdx
@@ -1,5 +1,6 @@
 ---
-title: Testing in a Federated Architecture
+title: Testing in a federated architecture
+id: TN0007
 tags: [server, router, testing]
 ---
 
