--- a/src/content/technotes/TN0007-testing-in-a-federated-architecture-unit-tests.mdx
+++ b/src/content/technotes/TN0007-testing-in-a-federated-architecture-unit-tests.mdx
@@ -6,33 +6,55 @@ tags: [server, router, testing]
 
 Comprehensively testing a federated supergraph requires all of the following:
 
-* [Unit testing](#unit-testing) in individual subgraphs
-* [Integration testing](#integration-testing) for the entire supergraph
-* [Composition testing](#composition-testing) for supergraph schema generation
+- [Composition testing](#composition-testing) for supergraph schema generation
+- [Unit testing](#unit-testing) in individual subgraphs
+- [Integration testing](#integration-testing) for the entire supergraph
 
 This article provides high-level guidance for each.
 
+## Composition testing
+
+Composition testing is specific to a federated architecture. It involves testing that your subgraph schemas successfully [compose into a supergraph schema](/federation/federated-types/composition/) that can resolve the operations sent by clients. You perform these tests with the [Rover CLI](/rover/), via the [`rover subgraph check`](/rover/commands/subgraphs#subgraph-check) command. We recommend performing this check in your CI/CD pipeline.
+
 ## Unit testing
 
-We recommend unit testing all your resolvers. When unit testing your resolvers, we recommend mocking as much of the data as possible using a package like [`@faker-js/faker`](https://www.npmjs.com/package/@faker-js/faker). This package allows you to use realistic fake data when mocking inputs and outputs.
+We recommend creating unit tests for each of your subgraph resolvers. When doing so, we recommend mocking as much data as possible using a package like [`@faker-js/faker`](https://www.npmjs.com/package/@faker-js/faker). This package generates realistic fake data for mocking inputs and outputs.
 
-### `__resolveReference`
+Using `@faker-js/faker` to mock a return value in `jest` looks something like the following:
 
-A [`__resolveReference`](/federation/entities/#2-define-a-reference-resolver) resolver warrants a specific callout in a federated architecture. A `__resolveReference` resolver is how subgraphs resolve entities across subgraphs, making testing this code very important.
+```js
+import { faker } from '@faker-js/faker';
+
+const testUser = {
+  userId: faker.datatype.uuid(),
+  username: faker.internet.userName(),
+  email: faker.internet.email(),
+  avatar: faker.image.avatar(),
+  password: faker.internet.password(),
+  birthdate: faker.date.birthdate(),
+  registeredAt: faker.date.past(),
+};
+
+const mockedFunction = jest.fn().mockReturnValue(testUser);
+```
+
+### Reference resolvers in unit tests
+
+The `__resolveReference` function (also known as a [reference resolver](/federation/entities/#2-define-a-reference-resolver) enables different subgraphs to resolve different fields of the same federated entity. Make sure to create unit tests for your reference resolvers, because they're vital to the successful execution of federated operations.
 
 ## Integration testing
 
-When doing integration tests, please consider the following:
+Follow these best practices when creating integration tests for your supergraph:
 
-- Operations should be pulled from current live queries
-  - Our recommended way is to look at the operations currently going through your graph and using those operations for testing.
-  - Current queries can be pulled from Apollo studio's API.
-- Random test queries/mutations should be avoided
-  - Random tests end up testing paths that are not realistic. We suggest pulling the queries from Apollo studio instead of using arbitrary queries.
-- Cardinality should be considered
-  - When running tests, specifically integration tests, low cardinality tests hit caches. The best way to avoid caches is to have a high cardinality in the variables used. We recommend mitigating the problem by using as many variables in your queries/mutations as possible. This allows for easy changing of inputs.
+- Use example operations that are actually executed against your supergraph.
+  - You can view the details of recent operations in Apollo Studio.
+  - Avoid boilerplate or randomly generated operations, because these don't reflect actual traffic.
+  - If you are not in production yet, we suggest making these tests as close to what you think they will be as possible.
+- Use variables to ensure high operation cardinality.
+  - If your test operations don't use any GraphQL variables (or if you use the _same_ variable values across executions), your supergraph is likely to return cached data. This circumvents large portions of execution logic, limiting test effectiveness.
+  - By using a variety of operations and variable values, you help make sure that your tests result in minimal cache hits.
 
-### `__resolveReference` and integration testing subgraphs
+### Reference resolvers in integration tests
 
 Depending on your schema, you may not start from the query node in a subgraph. The integration tests in this situation involves mimicking the gateway/router. You can execute [a query against `_entities`](/federation/federation-spec/#resolve-requests-for-entities) to do integration tests. This looks like the following:
 
@@ -44,8 +66,7 @@ const query = `query GetEntities($representations: [_Any!]!) {
    }
   }
 }`;
+``;
 ```
 
-## Composition testing
-
-Composition testing is specific to federated architectures. It involves testing that your graph will compose and handle the queries that are currently sent to it by clients. This is handled through [Rover](/docs/rover/). These checks are done by running the [`rover subgraph check`](/rover/commands/subgraphs#checking-subgraph-schema-changes) command. This is best used when configured within your CI/CD pipeline.
+For more information, see [`Query._entities`](/federation/subgraphs#query_entities).
