--- a/src/content/studio/federated-graphs.mdx
+++ b/src/content/studio/federated-graphs.mdx
@@ -175,7 +175,19 @@ In the **Schema > Reference** tab, you’ll also see a contact card when you hov
 
 ## Schema tagging
 
-Annotating fields and types in your subgraphs with `@tag` directives can help document your API. You can enable these tags to pass through to your consumers in Schema Reference and Explorer by updating the build configuration for a variant.
+In your subgraph schemas, you can use the `@tag` directive to tag a type or field with an arbitrary string value:
+
+```graphql {4} title="products.graphql"
+  type Product {
+  id: ID!
+  name: String!
+  codename: String! @tag(name: "internal")
+}
+```
+
+By default, these tags are _removed_ from the [API schema](/federation/federated-types/overview/#api-schema) that's generated as part of composition. This means that tag information _isn't visible_ to clients querying your supergraph.
+
+If tag information _should_ be visible to clients (for example, to help document your API), you can enable this for a variant in Studio with the following steps:
 
 To annotate your schema, you first add `@tag` directives in your subgraphs for the fields and types you would like to document. 
 
