--- a/src/content/studio/federated-graphs.mdx
+++ b/src/content/studio/federated-graphs.mdx
@@ -197,7 +197,7 @@ If tag information _should_ be visible to clients (for example, to help document
 
 Once you have enabled passthrough for your `@tag` directives for a variant, you can view directives inline with Schema Reference and Explorer.
 
-In the **Schema > Reference** tab, you will see tags inline with the identifier.
+In the **Schema > Reference** tab, tags are shown inline with each type and field:
 
 <img
   class="screenshot"
