--- a/src/content/studio/federated-graphs.mdx
+++ b/src/content/studio/federated-graphs.mdx
@@ -191,7 +191,10 @@ If tag information _should_ be visible to clients (for example, to help document
 
 
 1. Go to the **Settings** page for your variant in Apollo Studio. 
-2. On the **General** tab, click **Edit Configuration**.
+2. On the **General** tab, click **Edit Configuration**. The Update Build Configuration dialog appears.
+3. If you have a Federation 1 supergraph, enable the toggle for the `@tag` directive under **Directives** (this step isn't necessary for Federation 2 supergraphs).
+4. Under **Build Settings**, enable the toggle labeled **Show all uses of @tag directives to consumers in Schema Reference and Explorer**.
+4. Click **Save**. 
 3. Under **Build Settings**, enable the toggle labeled **Show all uses of @tag directives to consumers in Schema Reference and Explorer** and then click **Save**. 
 
 
