--- a/src/content/studio/federated-graphs.mdx
+++ b/src/content/studio/federated-graphs.mdx
@@ -198,7 +198,7 @@ If tag information _should_ be visible to clients (for example, to help document
 3. Under **Build Settings**, enable the toggle labeled **Show all uses of @tag directives to consumers in Schema Reference and Explorer** and then click **Save**. 
 
 
-Once you have enabled passthrough for your `@tag` directives for a variant, you can view directives inline with Schema Reference and Explorer.
+After you make your `@tag` directives visible, you can view them inline with both the Schema and Explorer tabs in Studio.
 
 In the **Schema > Reference** tab, tags are shown inline with each type and field:
 
