--- a/src/content/studio/federated-graphs.mdx
+++ b/src/content/studio/federated-graphs.mdx
@@ -209,7 +209,7 @@ In the **Schema > Reference** tab, tags are shown inline with each type and fiel
   width="424"
 />
 
-You will also see the tags in Explorer.
+Tags are also visible in the Explorer's Documentation tab:
 
 <img
   class="screenshot"
