Test PR for github support ticket
doing this for github support to see why my web hook is broken. Please ignore this.

--- a/src/content/technotes/TN0007-testing-in-a-federated-architecture-unit-tests.mdx
+++ b/src/content/technotes/TN0007-testing-in-a-federated-architecture-unit-tests.mdx
@@ -1,7 +1,7 @@
 ---
 title: Testing in a federated architecture
 id: TN0007
-tags: [server, router, testing]
+tags: [server, router, testing,fun]
 ---
 
 Comprehensively testing a federated supergraph requires all of the following:
