--- a/src/content/studio/dev-graphs.mdx
+++ b/src/content/studio/dev-graphs.mdx
@@ -3,7 +3,33 @@ title: Development graphs
 description: Use Studio features in your development environment
 ---
 
-Development graphs (or **dev graphs**) are a special type of graph in Apollo Studio. Unlike a _deployed_ graph (which represents a graph in a deployed environment like staging or production), a dev graph represents a graph in your own development environment.
+import {AiFillWarning} from '@react-icons/all-files/ai/AiFillWarning';
+import {Alert} from '../../components/Alert';
+
+<Alert>
+  <div style={{display: 'flex'}}>
+    <div style={{marginTop: 5}}>
+      <AiFillWarning />
+    </div>
+    <div>
+      Development graphs will no longer be supported after August 12, 2022. We
+      are sunsetting the development graph feature in favor of using Apollo
+      Studio Sandbox. Head to{' '}
+      <a
+        target="_blank"
+        rel="noopener noreferrer"
+        href="https://sandbox.apollo.dev"
+      >
+        Sandbox
+      </a>{' '}
+      to query against your local development endpoints.{' '}
+    </div>
+  </div>
+</Alert>
+
+Development graphs (or **dev graphs**) are a special type of graph in Apollo Studio.
+Unlike a _deployed_ graph (which represents a graph in a deployed environment like
+staging or production), a dev graph represents a graph in your own development environment.
 
 Your dev graphs are only visible to you, so you can prototype and iterate on schema changes quickly and safely, without creating noise for your teammates.
 
