--- a/src/content/studio/explorer/sandbox.mdx
+++ b/src/content/studio/explorer/sandbox.mdx
@@ -164,7 +164,13 @@ This may be useful for bootstrapping a GraphQL IDE onto a development endpoint o
      width="600"
    />
 
-3. Click **Copy** to copy the snippet, then paste it into your html code.
+3. Still in the dialog, use the tabs above the code snippet to select the snippet for your use case:
+
+    * Use **React** for React apps where you can `npm install` the `@apollo/sandbox` package.
+    * Use **JavaScript** for non-React JavaScript apps where you can `npm install` the `@apollo/sandbox` package.
+    * Use **Built file on CDN** to use Apollo's CDN-hosted embedded Sandbox.
+
+4. Click **Copy** to copy the snippet, then paste it into your html code.
 
 ### Options
 
