--- a/src/content/studio/explorer/sandbox.mdx
+++ b/src/content/studio/explorer/sandbox.mdx
@@ -188,6 +188,7 @@ The `EmbeddedSandbox` object takes an options object with the following structur
       },
     })
   },
+  includeCookies: false,
 }
 ```
 
