--- a/src/content/studio/explorer/sandbox.mdx
+++ b/src/content/studio/explorer/sandbox.mdx
@@ -164,7 +164,7 @@ This may be useful for bootstrapping a GraphQL IDE onto a development endpoint o
      width="600"
    />
 
-3. Still in the dialog, use the tabs above the code snippet to select the snippet for your use case:
+3. Within the dialog, use the tabs to select the code snippet for your use case:
 
     * Use **React** for React apps where you can `npm install` the `@apollo/sandbox` package.
     * Use **JavaScript** for non-React JavaScript apps where you can `npm install` the `@apollo/sandbox` package.
