--- a/src/content/studio/dev-graphs.mdx
+++ b/src/content/studio/dev-graphs.mdx
@@ -12,7 +12,7 @@ import {Alert} from '../../components/Alert';
       <AiFillWarning />
     </div>
     <div>
-      Development graphs will no longer be supported after August 12, 2022. We
+      Development graphs will no longer be supported after **August 12, 2022**. We
       are sunsetting the development graph feature in favor of using Apollo
       Studio Sandbox. Head to{' '}
       <a
