add a link to sandbox

--- a/src/content/studio/dev-graphs.mdx
+++ b/src/content/studio/dev-graphs.mdx
@@ -13,16 +13,21 @@ import {Alert} from '../../components/Alert';
     </div>
     <div>
       Development graphs will no longer be supported after August 12, 2022. We
-      are sunsetting the development graph feature in favor of using Apollo
-      Studio Sandbox. Head to{' '}
+      are sunsetting the development graph feature in favor of using{' '}
       <a
+        target="_blank"
+        rel="noopener noreferrer"
+        href="https://www.apollographql.com/docs/studio/explorer/sandbox"
+      >
+        Apollo Sandbox
+      </a>
+      . Head to <a
         target="_blank"
         rel="noopener noreferrer"
         href="https://sandbox.apollo.dev"
       >
         Sandbox
-      </a>{' '}
-      to query against your local development endpoints.{' '}
+      </a> to query against your local development endpoints.{' '}
     </div>
   </div>
 </Alert>
