--- a/src/content/technotes/TN0010-reponse-type-pattern.mdx
+++ b/src/content/technotes/TN0010-reponse-type-pattern.mdx
@@ -1,82 +1,101 @@
 ---
-title: Response-type Pattern
+title: Designing response types
 id: TN0010
 tags: [schema, best practices]
 ---
 
-Simple GraphQL API’s generally return entities as responses from both queries and mutations.
+Let's say we have a basic GraphQL API that defines the following `Query` type:
 
-While this works for demonstrating the capabilities of GraphQL it often doesn’t represent real-world interactions between the client and server.
+```graphql
+type Query {
+  users: [User!]!
+}
+```
 
-Instead of directly returning entity data, a `Response`-pattern type can be returned which contains the requested data, as well as any other additional metadata which may be helpful to facilitate the next query.
+This `Query.users` field makes intuitive sense: if you query it, you get back a list of `User` objects. _However_, this return type doesn't provide any insight into the result:
 
-For example, when returning a list of users additional details can be provided like count, or total.
+* If the list is empty, is that because there are zero users, or did an error occur?
+* Even if the list is populated, did the API return _all_ users or just a subset?
+
+To answer questions like these, it's helpful for top-level fields of `Query` and `Mutation` to return "wrapper" objects that can include both the operation result _and_ metadata about the operation's execution.
+
+## Example: `UsersResponse`
+
+The following example defines a `UsersResponse` type for our `Query.users` field:
 
 ```graphql
 enum ResponseStatus {
-	SUCCESS
-	FAILURE
+  SUCCESS
+  FAILURE
 }
 
 type User {
-	id: ID!
-	firstName: String!
-	lastName: String!
+  id: ID!
+  firstName: String!
+  lastName: String!
 }
 
 type UsersResponse {
-	status: ResponseStatus!
-	total: Int!
-	users: [User!]!
+  status: ResponseStatus!
+  total: Int!
+  users: [User!]!
 }
 
 type Query {
-	users: UsersResponse!
+  users: UsersResponse!
 }
 ```
+
+With this change, a client's query can now check the `status` field to determine whether an empty list might be due to an error:
 
 ```graphql
 query FetchUsers {
-	users {
-		status
-		total
-		users {
-			id
-			firstName
-			lastName
-		}
-	}
+  users {
+    status
+    total
+    users {
+      id
+      firstName
+      lastName
+    }
+  }
 }
 ```
 
-This response type pattern can also be useful for mutations where error responses can be returned in the cases of expected failures.
+## Response types for mutations
 
-For example, when calling a checkout mutation on a eCommerce graph, low inventory levels and insufficient card funds are responses that should be accounted for as they are not real errors but failures that should be expected. By using `ErrorResponse` types front-end developers can provide customized experiences for each of these responses.
+> See also [Structuring mutation responses](/apollo-server/schema/schema#structuring-mutation-responses).
+
+This response type pattern is even more useful for mutations, because they can result in many valid failure states (such as attempting to delete an object that doesn't exist).
+
+For example, let's say we have an e-commerce graph. When executing a `checkout` mutation, it's valid for that mutation to fail if a purchased item is out of stock or the buyer has insufficient funds.
+
+If we define a set of `ErrorResponse` types in our schema, front-end developers can provide customized experiences based on the type of failure that occurred:
 
 ```graphql
 interface MutationResponse {
-	status: ResponseStatus!
+  status: ResponseStatus!
 }
 
 type CheckoutSuccess implements MutationResponse {
-	status: ResponseStatus!
-	cart: [Product!]!
-	invoice: Invoice!
+  status: ResponseStatus!
+  cart: [Product!]!
+  invoice: Invoice!
 }
 
 interface ErrorResponse {
-	status: ResponseStatus!
-	message: String!
+  status: ResponseStatus!
+  message: String!
 }
 
 type CheckoutError implements ErrorResponse {
-	status: ResponseStatus!
-	message: String!
+  status: ResponseStatus!
+  message: String!
 }
 
 union CheckoutResponse = CheckoutSuccess | CheckoutError
 
 type Mutation {
-	checkout(cart: ID!): CheckoutResponse!
+  checkout(cart: ID!): CheckoutResponse!
 }
 ```
