--- a/src/content/studio/org/graphs.mdx
+++ b/src/content/studio/org/graphs.mdx
@@ -157,13 +157,13 @@ You can filter your schema definitions by name, along with any combination of th
 </td>
 <td>
 
-Include results defined in the specified subgraph.
+Include results defined in any of the specified subgraphs.
 
 Valid only for federated supergraphs.
 </td>
 <td>
 
-`subgraph:products`
+`subgraph:products,reviews`
 
 </td>
 </tr>
@@ -176,12 +176,12 @@ Valid only for federated supergraphs.
 </td>
 <td>
 
-Include results that have the specified directive applied. If viewing a table of objects, also include objects with at least one _field_ that has this directive.
+Include results that have any of the specified directives applied. If viewing a table of objects, also include objects with at least one _field_ that has a specified directive.
 
 </td>
 <td>
 
-`directive:deprecated`
+`directive:deprecated,unused`
 </td>
 </tr>
 
@@ -193,14 +193,14 @@ Include results that have the specified directive applied. If viewing a table of
 </td>
 <td>
 
-Include results with the specified return type. If viewing a table of objects, include objects with at least one _field_ that has this return type.
+Include results with any of the specified return types. If viewing a table of objects, include objects with at least one _field_ that has a specified return type.
 
 This filter includes all fields that return a particular type, regardless of each field's nullability or whether it returns a list. For example, if you specify `returnType:Int`, the filter includes fields that return any of `Int`, `Int!`, or `[Int]`.
 
 </td>
 <td>
 
-`returnType:Int`
+`returnType:Int,String`
 </td>
 </tr>
 
@@ -212,12 +212,12 @@ This filter includes all fields that return a particular type, regardless of eac
 </td>
 <td>
 
-Include results that take a GraphQL argument with the specified name. If viewing a table of objects, include objects with at least one _field_ that takes this argument.
+Include results that take a GraphQL argument with any of the the specified names. If viewing a table of objects, include objects with at least one _field_ that takes a specified argument.
 
 </td>
 <td>
 
-`argument:count`
+`argument:offset,limit`
 </td>
 </tr>
 
@@ -229,14 +229,14 @@ Include results that take a GraphQL argument with the specified name. If viewing
 </td>
 <td>
 
-If your graph uses the `@tag` directive, include results that have a `@tag` with the specified name applied. If viewing a table of objects, also include objects with at least one _field_ that has this `@tag`.
+If your graph uses the `@tag` directive, include results that have a `@tag` with any of the specified names. If viewing a table of objects, also include objects with at least one _field_ that has a specified `@tag`.
 
 If your graph doesn't use the `@tag` directive, this filter is not available.
 
 </td>
 <td>
 
-`tag:internal`
+`tag:internal,experimental`
 </td>
 </tr>
 
@@ -246,10 +246,12 @@ If your graph doesn't use the `@tag` directive, this filter is not available.
 
 ###### Filtering rules
 
-* If you apply multiple filters of the same type, those filters use "OR" logic.
-    * If you filter by `subgraph:products` and `subgraph:reviews`, the result includes definitions from each subgraph.
-* If you apply filters of _different_ types, those filters use "AND" logic.
-    * If you filter by `subgraph:products` and `returnType:Int`, the result includes only definitions that fulfill _both_ criteria.
+* If you list multiple possible values in a single filter, those values use "OR" logic.
+    * For example, if you filter by `subgraph:products,reviews` the result includes definitions from each subgraph.
+* If you apply multiple types of filters, those filters use "AND" logic.
+    * For example, if you filter by `subgraph:products` and `returnType:Int`, the result includes only definitions that fulfill _both_ criteria.
+* Currently, it isn't possible to use "AND" logic for multiple filters of the _same_ type.
+    * For example, it isn't possible to filter by `subgraph:products` "AND" `subgraph:reviews` to include only definitions that are present in _both_ subgraphs.
 
 ### Tracking schema changes
 
