--- a/src/content/studio/org/graphs.mdx
+++ b/src/content/studio/org/graphs.mdx
@@ -132,11 +132,18 @@ Each type definition in the table includes:
 
 The top of the Schema page provides a **Filter Schema** box you can use to find types and fields that match a set of filters:
 
-[TODO screenshot]
+<img
+  className="screenshot"
+  alt="Schema page filter box and dropdowns"
+  src="../img/schema-page-filters.jpg"
+/>
 
-These filters remain active as you move between definitions on the Schema page. Click the button to the right of the **Filter Schema** box to copy the URL for your currently active set of filters.
+> * Click the arrow button to the left of the filter box to show/hide the filter selection dropdowns.
+> * Click the button to the right of the filter box to copy a shareable URL for your currently active set of filters (you can also copy your browser's address bar directly).
 
-You can filter your schema definitions by name, along with any combination of the following:
+Any filters you set remain active as you move between definitions on the Schema page.
+
+You can filter your schema definitions by type/field name (as shown above), along with any combination of the following:
 
 <table class="field-table">
   <thead>
@@ -165,6 +172,25 @@ Valid only for federated supergraphs.
 
 `subgraph:products,reviews`
 
+</td>
+</tr>
+
+<tr>
+<td>
+
+##### `tag`
+
+</td>
+<td>
+
+If your graph uses the `@tag` directive, include results that have a `@tag` with any of the specified names. If viewing a table of objects, also include objects with at least one _field_ that has a specified `@tag`.
+
+If your graph doesn't use the `@tag` directive, this filter is not available.
+
+</td>
+<td>
+
+`tag:internal,experimental`
 </td>
 </tr>
 
@@ -218,25 +244,6 @@ Include results that take a GraphQL argument with any of the the specified names
 <td>
 
 `argument:offset,limit`
-</td>
-</tr>
-
-<tr>
-<td>
-
-##### `tag`
-
-</td>
-<td>
-
-If your graph uses the `@tag` directive, include results that have a `@tag` with any of the specified names. If viewing a table of objects, also include objects with at least one _field_ that has a specified `@tag`.
-
-If your graph doesn't use the `@tag` directive, this filter is not available.
-
-</td>
-<td>
-
-`tag:internal,experimental`
 </td>
 </tr>
 
