--- a/src/content/technotes/TN0010-response-cache-eviction.mdx
+++ b/src/content/technotes/TN0010-response-cache-eviction.mdx
@@ -48,9 +48,9 @@ function sha(s: string) {
 }
 
 generateCacheKey(requestContext, keyData) {
-  const operationName = requestContext.request.operationName ?? 'unnamed'
-  const key = operationName + ':' + sha(JSON.stringify(keyData))
-  return key
+  const operationName = requestContext.request.operationName ?? 'unnamed';
+  const key = operationName + ':' + sha(JSON.stringify(keyData));
+  return key;
 }
 ```
 
