--- a/src/content/technotes/TN0009-gateway-performance.mdx
+++ b/src/content/technotes/TN0009-gateway-performance.mdx
@@ -97,7 +97,7 @@ At higher CPU utilization percentages, you may start to see event loop lag incre
 
 Additionally, we recommend keeping CPU utilization below 50%. At higher CPU utilization percentages, you may start to see event loop delays increase relative. Monitoring both metrics can help provide a clearer image of bottlenecks beyond just code profiling alone.
 
-If CPU throttling becomes a problem, consider removing the limits on your gateway pods. More information on why you would do this can be found [here](https://erickhun.com/posts/kubernetes-faster-services-no-cpu-limits/).
+If CPU throttling becomes a problem, consider removing the limits on your gateway pods as discussed in [this blog post on Kubernetes resource limits](https://erickhun.com/posts/kubernetes-faster-services-no-cpu-limits/).
 
 ## Check query plans
 
