--- a/src/content/technotes/TN0010-reponse-type-pattern.mdx
+++ b/src/content/technotes/TN0010-reponse-type-pattern.mdx
@@ -1,7 +1,7 @@
 ---
 title: Designing response types
 id: TN0010
-tags: [schema, best practices]
+tags: [schema design, best practices]
 ---
 
 Let's say we have a basic GraphQL API that defines the following `Query` type:
