Add docs about using the Apollo Server plugin for embeded explorer

--- a/src/content/studio/explorer/additional-features.mdx
+++ b/src/content/studio/explorer/additional-features.mdx
@@ -218,7 +218,7 @@ query StarWarsGenderStats {
 
 ### Is the Explorer available for on-prem distribution?
 
-Not at this time. The Explorer is available for free, unlimited use in Apollo Studio, but it is not available for download or on-prem distribution. This might change in the future, but for now our goal is to provide the best possible Explorer experience from within Studio.
+Yes! Through the use of [Embeded Explorer](/studio/explorer/embed-explorer) you can now include Explorer on any site you might have internally.
 
 ### Do my Explorer operations pass through Apollo servers?
 
