--- a/src/content/studio/explorer/embed-explorer.mdx
+++ b/src/content/studio/explorer/embed-explorer.mdx
@@ -9,19 +9,19 @@ For example, here's an embedded Explorer for an Apollo example graph. Try it out
 <EmbeddableExplorer />
 
 ## Apollo Server plugin
-As of Apollo Server [v3.8.0](https://github.com/apollographql/apollo-server/blob/main/CHANGELOG.md#v380) there now a built-in plugin that will include the embeded Explorer for you.
+As of Apollo Server [v3.8.0](https://github.com/apollographql/apollo-server/blob/main/CHANGELOG.md#v380) there is now a built-in plugin that will include the embeded Explorer for you.
 
 You can use `ApolloServerPluginLandingPageLocalDefault` plugin for localhost developement, or `ApolloServerPluginLandingPageProductionDefault` for use in a production environment.
 
 ```js
-import {
-  ApolloServerPluginLandingPageProductionDefault,
-  ApolloServerPluginLandingPageLocalDefault
-} from 'apollo-server-core';
+const {
+ ApolloServerPluginLandingPageProductionDefault,
+ ApolloServerPluginLandingPageLocalDefault
+} = require('apollo-server-core');
 
 let plugins = [];
 if (process.env.NODE_ENV === 'production') {
-  plugins = [ApolloServerPluginLandingPageProductionDefault({embed: true, graphRef: 'myGraph@prod'})]
+  plugins = [ApolloServerPluginLandingPageProductionDefault({ embed: true, graphRef: 'myGraph@prod' })]
 } else {
   plugins = [ApolloServerPluginLandingPageLocalDefault({ embed: true })]
 }
