--- a/src/content/studio/explorer/embed-explorer.mdx
+++ b/src/content/studio/explorer/embed-explorer.mdx
@@ -11,7 +11,7 @@ For example, here's an embedded Explorer for an Apollo example graph. Try it out
 ## Apollo Server plugin
 As of Apollo Server [v3.8.0](https://github.com/apollographql/apollo-server/blob/main/CHANGELOG.md#v380) there is now a built-in plugin that will include the embeded Explorer for you.
 
-You can use `ApolloServerPluginLandingPageLocalDefault` plugin for localhost developement, or `ApolloServerPluginLandingPageProductionDefault` for use in a production environment.
+You can use `ApolloServerPluginLandingPageLocalDefault` plugin for localhost development, or `ApolloServerPluginLandingPageProductionDefault` for use in a production environment.
 
 ```js
 const {
