--- a/src/content/technotes/TN0010-response-cache-eviction.mdx
+++ b/src/content/technotes/TN0010-response-cache-eviction.mdx
@@ -10,7 +10,7 @@ Apollo Server’s Full Response Cache plugin (`apollo-server-plugin-response-cac
 
 In practice, this usually means setting a short TTL so that results don’t become stale. 
 
-As of version `3.7.0`, the Full Response Cache plugin allows customizing cache keys to support new cache eviction patterns. This means it’s easier to use long cache TTLs and increase the hit rate on your cache because you can evict the cached responses when relevant events occur.
+As of version `3.7.0`, the Full Response Cache plugin (`apollo-server-plugin-response-cache`) allows customizing cache keys to support new cache eviction patterns. This means it’s easier to use longer cache TTLs and increase the hit rate on your cache by evicting the cached responses when relevant events occur.
 
 ## Customizing the Cache Key
 
