--- a/src/content/technotes/TN0010-response-cache-eviction.mdx
+++ b/src/content/technotes/TN0010-response-cache-eviction.mdx
@@ -14,7 +14,7 @@ As of version `3.7.0`, the Full Response Cache plugin (`apollo-server-plugin-res
 
 ## Customizing the Cache Key
 
-This whole solutions works by defining a custom response cache key by a pattern that can later be searched on in the cache. What this key should be comprised of and how it should be structured depends on the use-case and what search patterns our cache implementation supports. 
+This works by defining a custom response cache key by a pattern that can later be searched on in the cache. What this key should be comprised of and how it should be structured depends on the use-case and what search patterns our cache implementation supports. 
 
 ### A Note on Cache Key Uniqueness
 
